# d9d

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  toc.md  zensical.toml
.github/workflows/: ci.yml  documentation.yml  release.yml
0_loop/: 0_index.md  1_inference_loop.md  config.md  interfaces.md
0_loop/0_index/: index.html
0_loop/1_inference_loop/: index.html
0_loop/config/: index.html
0_loop/interfaces/: index.html
benchmark/d9d_benchmark/: fp32_to_bf16_stochastic.py
core/: autograd_extensions.md  dist_context.md
core/autograd_extensions/: index.html
core/dist_context/: index.html
core/dist_ops/: index.html
core/sharding/: index.html
core/types/: index.html
d9d/core/: offload.py
d9d/core/autograd/: __init__.py  grad_context.py
d9d/core/dist_context/: __init__.py  configured.py  device_mesh_domains.py  log.py  params.py
d9d/core/dist_ops/: __init__.py  object.py  tensor.py
d9d/core/offload/: __init__.py  api.py  tensor.py
d9d/core/protocol/: __init__.py  training.py
d9d/core/sharding/: __init__.py  auto_spec.py  shard.py  spec.py  unshard.py
d9d/core/types/: __init__.py  data.py  pytree.py
d9d/dataset/: __init__.py  buffer_sorted.py  padding.py  pooling.py  sharded.py
d9d/internals/determinism/: __init__.py  seed.py
d9d/internals/grad_norm/: __init__.py  group.py  norm.py
d9d/internals/grad_sync/: __init__.py  bucket.py  placement_helper.py  synchronizer.py
d9d/internals/metric_collector/: __init__.py  collector.py
d9d/internals/pipeline_state/: __init__.py  api.py  handler.py  storage.py
d9d/internals/profiling/: __init__.py  profile.py
d9d/internals/state/: __init__.py  main_process.py
d9d/kernel/cce/: __init__.py  cce.py  main.py
d9d/kernel/flash_attn/: __init__.py  function.py
d9d/kernel/general/: __init__.py  get_int_dtype.py
d9d/kernel/gmm/: __init__.py  function.py
d9d/kernel/moe/: __init__.py  indices_to_multihot.py  permute_with_probs.py
d9d/kernel/normalization/: __init__.py
d9d/kernel/stochastic/: __init__.py  adamw_step.py  copy.py  copy_fp32_to_bf16_stochastic.py
d9d/kernel/swiglu/: __init__.py  function.py  op.py
d9d/loop/: config.py  state.py
d9d/loop/auto/: __init__.py  auto_lr_scheduler.py  auto_optimizer.py
d9d/loop/component/: __init__.py  batch_maths.py  checkpointer.py  data_loader_factory.py  garbage_collector.py  gradient_clipper.py  gradient_manager.py  job_logger.py  job_profiler.py  loss_computer.py  model_stage_exporter.py  model_stage_factory.py  optimizer_factory.py  pipeline_result_processing.py  stepper.py  task_operator.py  timeout_manager.py  train_sleeper.py  train_task_operator.py
d9d/loop/config/: __init__.py  config.py  types.py
d9d/loop/control/: __init__.py  dataset_provider.py  lr_scheduler_provider.py  model_provider.py  optimizer_provider.py  task.py
d9d/loop/event/: __init__.py  core.py  reflection.py
d9d/loop/run/: __init__.py  inference.py  sleeper.py  (+1 more)
d9d/lr_scheduler/: __init__.py  visualizer.py
d9d/metric/: __init__.py  abc.py
d9d/peft/: __init__.py  applicator.py  base.py
d9d/tracker/: __init__.py  base.py  factory.py
dataset/: index.html  index.md
docs/: index.md  toc.md
docs/0_loop/: 0_index.md  config.md  interfaces.md
docs/core/: autograd_extensions.md  dist_context.md  dist_ops.md  offload.md  protocol.md  sharding.md  types.md
docs/dataset/: index.md
docs/internals/: determinism.md  grad_norm.md  grad_sync.md  metric_collector.md  pipeline_state.md  pipelining.md  profiling.md  tracker_integration.md
docs/loop/: config.md  inference.md  train.md
docs/lr_scheduler/: piecewise.md  visualization.md
docs/metric/: custom.md  implemented.md  index.md  overview.md
docs/model_states/: io.md  mapper.md
docs/models/: 1_model_design.md  2_horizontal_parallelism.md  3_pipeline_parallelism.md  4_model_catalogue.md  horizontal_parallelism.md  model_design.md  pipeline_parallelism.md  qwen3_moe.md
docs/modules/: embedding.md  ffn.md  moe.md
docs/optimizer/: stochastic.md
docs/peft/: full_tune.md  lora.md  overview.md  stack.md
docs/pipelining/: 1_user_api.md  2_developers.md
docs/stochastic/: kernels.md  optimizers.md  type_casting.md
example/qwen3_moe/: calculate_perplexity.json  calculate_perplexity.py  pretrain.json  pretrain.py
internals/: metric_collector.md  pipeline_state.md  pipelining.md  tracker_integration.md
internals/determinism/: index.html
internals/grad_norm/: index.html
internals/grad_sync/: index.html
internals/metric_collector/: index.html
internals/pipeline_state/: index.html
internals/pipelining/: index.html
internals/profiling/: index.html
internals/tracker_integration/: index.html
lr_scheduler/piecewise/: index.html
lr_scheduler/visualization/: index.html
metric/: 0_index.md  index.html  index.md
metric/0_index/: index.html
metric/custom/: index.html
metric/implemented/: index.html
model_states/: io.md
model_states/io/: index.html
model_states/mapper/: index.html
models/: 1_model_design.md  3_pipeline_parallelism.md  qwen3_moe.md
models/1_model_design/: index.html
models/2_horizontal_parallelism/: index.html
models/3_pipeline_parallelism/: index.html
models/4_model_catalogue/: index.html
models/qwen3_moe/: index.html
modules/: attention.md  ffn.md  head.md  hidden_states_aggregator.md  moe.md  positional.md
modules/attention/: index.html
modules/embedding/: index.html
modules/ffn/: index.html
modules/head/: index.html
modules/hidden_states_aggregator/: index.html
modules/moe/: index.html
modules/positional/: index.html
optimizer/: stochastic.md
optimizer/stochastic/: index.html
peft/: 0_index.md  full_tune.md  lora.md  stack.md
peft/0_index/: index.html
peft/full_tune/: index.html
peft/lora/: index.html
peft/stack/: index.html
pipelining/: 0_intro.md
pipelining/0_intro/: index.html
search/: search_index.json
style/: style.css
test/d9d_test/: conftest.py
toc/: index.html
(+341 files in other folders)
