[project]
name = "d9d"
version = "0.5.0"
description = "d9d - d[istribute]d - distributed training framework based on PyTorch that tries to be efficient yet hackable"
authors = [
    {name = "Maksim Afanasyev", email = "mr.applexz@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11,<3.15"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",

]

[project.urls]
Repository = "https://github.com/d9d-project/d9d"
Documentation = "https://d9d-project.github.io/d9d"
Homepage = "https://d9d-project.github.io/d9d"
Issues = "https://github.com/d9d-project/d9d/issues"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
pydantic = ">=2.0.0"
torchdata = ">=0.11.0"
safetensors = ">=0.7.0"
tqdm = ">=4.0.0"
triton = ">=3.6.0"
torch = ">=2.10.0"

numpy = { version = ">=2.0.0", optional = true }  # locking numpy seed (if it is installed)

aim = { version = ">=3.0.0,<4.0.0", optional = true }  # Aim tracker integration
setuptools = { version = ">=70.0.0", optional = true }  # Unset dependency for Aim

plotly = { version = ">=6.0.0", optional = true }  # For visualizing LR schedulers

nv-grouped-gemm = { version = ">=1.1.4", optional = true }  # For MoE, https://github.com/fanshiqing/grouped_gemm/
deep-ep = { version = ">=1.2.1", optional = true }  # For MoE, https://github.com/deepseek-ai/DeepEP

cut-cross-entropy = { version = ">=25.9.3", optional = true }  # For efficient CE, https://github.com/apple/ml-cross-entropy


[tool.poetry.extras]
aim = ["aim", "setuptools"]
visualization = ["plotly"]
moe = ["nv-grouped-gemm", "deep-ep"]
cce = ["cut-cross-entropy"]


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.13"
pre-commit = "^4.5.1"
python-semantic-release = "^10.5.3"
ty = "^0.0.16"


[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
coverage = "^7.13.1"
pytest-instafail = "^0.5.0"
pandas = "^3.0.0"  # for triton benchmarks
matplotlib = "^3.10.8"  # for triton benchmarks
transformers = "^4.57.6"  # for comparing models
scikit-learn = "^1.8.0"  # for comparing metrics


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^1.0.1"}
mkdocs-shadcn = "^0.9.8"
pymdown-extensions = "^10.20"
pygments = "^2.19.2"
mkdocs-material = "^9.7.1"


[tool.poetry.group.compat-local-overrides.dependencies]
cut-cross-entropy = {path = "packages/cut_cross_entropy-25.9.3-py3-none-any.whl"}
deep-ep = {path = "packages/deep_ep-1.2.1+9af0e0d-cp311-cp311-linux_x86_64.whl"}
nv-grouped-gemm = {path = "packages/nv_grouped_gemm-1.1.4.post8-cp311-cp311-linux_x86_64.whl"}


[tool.poetry.group.examples.dependencies]
datasets = "^4.5.0"


[tool.pytest.ini_options]
markers = [
    "local: no torchrun",
    "distributed: run using torchrun",
]

[tool.ruff]
src = ["d9d"]
target-version = "py311"
include = [
    "d9d/**/*.py",
    "test/**/*.py",
    "benchmark/**/*.py",
    "example/**/*.py"
]
exclude = [
    "d9d/kernel/cce/**.py",
    "d9d/kernel/moe/**.py",
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
preview = true
extend-select = [
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "BLE",
    "FBT003",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "EXE",
    "FA",
    "INT",
    "ISC",
    "ICN",  # we may configure it later
    "LOG",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RET",
    "SLF",
    "SIM",
    "SLOT",
    # "TD", # enable later
    "TC",
    "PTH",
    "FLY",
    "I",
    "C90",
    "N",
    "PERF102",
    "PERF203",
    "PERF402",
    "E",
    "W",
    "F",
    "PGH",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "UP",
    "FURB",
    "RUF",
    "TRY"
]
fixable = [
    "F401",
    "UP035",
    "I001",
    "E302",
    "E303",
    "Q000",
    "RUF022",
    "W292",
    "W293",
    "W391"
]
ignore = [
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in {name}
    "S311",  # Standard pseudo-random generators are not suitable for cryptographic purposes
    "COM812",  # we do not use trailing commas everywhere
    "C420",  # Unnecessary dict comprehension for iterable; use dict.fromkeys instead
    "C416",  # Unnecessary {kind} comprehension (rewrite using {kind}())
    "G004",  # Logging statement uses f-string
    "PIE808",  #  	Unnecessary start argument in range
    "PT011",  # pytest.raises({exception}) is too broad, set the match parameter or use a more specific exception
    "PT012",  # pytest.raises() block should contain a single simple statement
    "RET504",  # Unnecessary assignment to {name} before return statement
    "RET505",  # Unnecessary {branch} after return statement
    "SIM103",  # Return the condition {condition} directly
    "SIM108",  # Use ternary operator {contents} instead of if-else-bloc
    "TC002",  # Move third-party import {} into a type-checking block
    "TC001",  # Move own import into a type-checking block
    "PLR2004",  # Magic value used in comparison, consider replacing {value} with a constant variable
    "PLR6301",  # Method {method_name} could be a function, class method, or static method
    "PLR0904",  # Too many
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0914",
    "PLR0915",
    "PLR0916",
    "PLR0917",
    "PLR6104",  # Use {operator} to perform an augmented assignment directly
    "FURB118",  # Use operator.{operator} instead of defining a {target}
    "FURB140",  # Use itertools.starmap instead of the generator
    "TRY003",  # Avoid specifying long messages outside the exception class
    "TC006",  # Add quotes to type expression in typing.cast()
    "TRY004",  # Prefer TypeError exception for invalid type
    "PGH003"  # Use specific rule codes when ignoring {} issues
]

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true

[tool.ruff.lint.per-file-ignores]
"test/*.py" = [
    "S101", # asserts allowed in tests...
    "D",  # no docs for tests sorry
    "ANN",  # no type annotations for tests
    "SLF001"  # private access is ok for tests
]
"example/*.py" = [
    "INP001"  # no __init__.py
]

[tool.ruff.lint.pep8-naming]
extend-ignore-names = [
    "F",  # pytorch nn.functional :)
    "BLOCK_SIZE"  # triton kernels
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.src]
exclude = [
    "test/**",
]

[tool.ty.rules]
# currently does not work properly with torch.distributed package (please see https://github.com/astral-sh/ty/issues/2244)
possibly-missing-attribute = "ignore"

[[tool.ty.overrides]]
include = [
    "d9d/kernel/cce/*",
    "d9d/kernel/moe/*",
    "d9d/module/block/moe/communications/deepep.py"
]
rules = { all = "ignore" }

[tool.semantic_release]
allow_zero_version = true
major_on_zero = true
version_toml = ["pyproject.toml:project.version"]
build_command = "pip install poetry && poetry build"
commit_parser = "conventional"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Initial [Cc]ommit.*''',
]

[tool.semantic_release.remote]
type = "github"